# Field-Serviceable-Smart-Power-Monitor-using-STM32F103C8T6

./: .gitignore  README.md
.github/: copilot-instructions.md
docs/notes/: code-note.md  gpio-note.md  rcc-note.md  to-do.md  watchdog-timer-note.md
docs/references/: bom_ade7758_pcb_info.xlsx  deep-wiki-bootloader.md
project-artifactspace/: Custom-Bootloader-Bare-metal-Drivers-on-STM32F103C8T6 Debug.launch
project-artifactspace/HAL_Sample_Driver/RCC/: stm32f1xx_hal_rcc.c  stm32f1xx_hal_rcc.h
project-artifactspace/Impl/: lib_clock_impl.c  lib_iwdg_impl.c  lib_reset_impl.c
project-artifactspace/Inc/: lib_clock_management.h  lib_include_management.h  lib_iwdg_management.h  lib_keyword_def.h  lib_keyword_define.h  lib_rcc.h  lib_reset_management.h
project-artifactspace/Inc/clock/: lib_clock_def.h  lib_clock_hal.h
project-artifactspace/Inc/generic/: lib_condition_def.h  lib_keyword_def.h
project-artifactspace/Inc/gpio/: lib_gpio_def.h  lib_gpio_hal.h
project-artifactspace/Inc/iwdg/: lib_iwdg_def.h  lib_iwdg_hal.h
project-artifactspace/Inc/reset/: lib_reset_def.h  lib_reset_hal.h  lib_reset_management.h
project-artifactspace/Src/: lib_clock_hal.c  lib_clock_management.c  main.c
project-artifactspace/Test/clock/: CMakeLists.txt  header_dependency.h  source_dependency.c  unit_test_implementation.c
project-artifactspace/Test/iwdg/: CMakeLists.txt  header_dependency.h  source_dependency.c  source_depenency.c  unit_test.c  unit_test_implementation.c
project-artifactspace/Test/reset/: CMakeLists.txt  header_dependency.h  source_dependency.c  unit_test_implementation.c
project-halartifactspace/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
project-obsidianspace/: OBSIDIAN-README.md
project-obsidianspace/excalidraws/: excalidraw-2025-12-25.excalidraw.md
project-obsidianspace/notes/: watchdog-timer-note.md
